--- a/templates/index2.html
+++ b/templates/index2.html
@@ -23,25 +23,25 @@
           <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 <!--          <script src="{{ url_for('static', filename='js/imageuploadify.js') }}"></script>-->
       </head>
-      <body onload="brython()">
+      <body onload="brython()" class="col-sm-12">
 <!--      <input type="button" id='script' name="scriptbutton" value=" Run Script " onclick="goPython()">-->
       <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
           <header class="main-header">
               <nav class="nav main-nav center">
-                  <ul>
-                      <li class="active"><a href="/">Home (CT and Xray Together)</a></li>
-                      <li><a href="/xray">Xray</a></li>
-                      <li><a href="/ct">CT</a></li>
+                  <ul class="row">
+                      <li class="active col-sm-12"><a href="/">Home (CT and Xray Together)</a></li>
+                      <li class="col-sm-12"><a href="/xray">Xray</a></li>
+                      <li class="col-sm-12"><a href="/ct">CT</a></li>
                   </ul>
               </nav>
-              <h1 class="band-name zakcenter">COVID19 Chest Image Detector</h1>
+              <h1 class="band-name zakcenter col-sm-12">COVID19 Chest Image Detector</h1>
 
           </header>
           <br>
           <hr>
           <br>
-          <section class="content-section container">
-              <h3 class="section-header">Upload Chest Scan Image(s)</h3>
+          <section class="content-section container col-sm-12">
+              <h3 class="section-header col-sm-12">Upload Chest Scan Image</h3>
 <!--              <i class="fas fa-cloud-upload-alt"></i>-->
               <br>
 <!--              <form>-->
@@ -50,8 +50,8 @@
 
 <!--              <form action=C:/xampp/cgi-bin/querySupplierPart.py method=“GET” id="partformcoloraddress">-->
               <form id="upload-file" method="post" enctype="multipart/form-data">
-                  <img src="{{url_for('static', filename='images/covidback.jfif')}}" class="center">
-                  <img src="{{url_for('static', filename='images/covidback.jfif')}}" class="center">
+                  <img src="{{url_for('static', filename='images/covidback.jfif')}}" class="center col-sm-12">
+                  <img src="{{url_for('static', filename='images/covidback.jfif')}}" class="center col-sm-12">
 <!--                  <i class="fas fa-cloud-upload-alt"></i>-->
 <!--                  <div class="icon"><i class="fas fa-cloud-upload-alt"></i></div>-->
                   <br>
@@ -63,7 +63,7 @@
 <!--                  </div>-->
 
                   <br>
-                  <div class="drag-area center drop-zone drop-zone__input center">
+                  <div class="drag-area center drop-zone drop-zone__input center col-sm-12">
                   <div class="icon"><i class="fas fa-cloud-upload-alt"></i></div>
                   <header>Drag & Drop to Upload File</header>
                   <span class="drop-zone__prompt">Drop Image here or click to upload</span>
@@ -84,9 +84,9 @@
 <!--                  <label for="imageUpload" class="partButton" onclick="chooseFile();">-->
 <!--                  ...Select File...-->
 <!--                  </label>-->
-                  <button class="partButton" onclick="chooseFile();" type="button">Upload</button>
+                  <button class="partButton col-sm-8" onclick="chooseFile();" type="button">Upload</button>
                   <br>
-              <p class="sakcenter"><h2 class="sakcenter">Detect Whether the uploaded Xray or CT Chest Scan Image(s) has Covid19:</h2></p>
+              <p class="sakcenter col-sm-12"><h2 class="sakcenter">Detect Whether the uploaded Xray or CT Chest Scan Image(s) has Covid19:</h2></p>
 <!--               <p>Please enter <strong>Both</strong> the part's color and its supplier(s) address respectively in the following to retrieve its part(s) names:</p>-->
 <!--                  <label for="pcolor" class="partLabel">Part Color:</label>-->
 <!--                 <input required class="suppliersInput" type="text" id="pcolor" name="searchboxpcolor" placeholder="Enter Part's Color"><br><br>-->
@@ -97,33 +97,33 @@
 <!--               <button class="detectButton" type="submit" form="partformcoloraddress" value="Submit" onclick="showProgressBar()" id="detectCovid19Bt">Detect COVID19</button>-->
 
 <!--              <button type="button" class="detectButton" id="btn-predict">Detect Covid19</button>-->
-              <div class="image-section center" style="display:none;">
-              <div class="img-preview center">
-            <div id="imagePreview" class="center">
+              <div class="image-section center col-sm-12" style="display:none;">
+              <div class="img-preview center col-sm-12">
+            <div id="imagePreview" class="center col-sm-12">
             </div>
             </div>
             <div>
-            <button type="button" class="detectButton" id="btn-predict">Detect Covid19</button>
+            <button type="button" class="detectButton col-sm-8" id="btn-predict">Detect Covid19</button>
             </div>
             </div>
 
 
 
-              <div class="loader center" style="display:none;"></div>
+              <div class="loader center col-sm-12" style="display:none;"></div>
              <br>
-             <h3 id="result" class="center">
-             <span class="center"> </span>
+             <h3 id="result" class="center col-sm-12">
+             <span class="center col-sm-12"> </span>
              </h3>
 
               <br>
-              <div class="circular center" id="progressBarDIV">
+              <div class="circular center col-sm-12" id="progressBarDIV">
     <div class="inner"></div>
     <div class="number" id="numpb">0%</div>
     <div class="circle">
       <div class="bar left">
         <div class="progress"></div>
       </div>
-      <div class="bar right">
+      <div class="bar right col-sm-12">
         <div class="progress"></div>
       </div>
     </div>
@@ -185,28 +185,28 @@
           </section>
 <!--          <br>-->
           <hr>
-          <footer class="main-footer">
-              <div class="container main-footer-container">
-                  <h3 class="seekcenter">Covid19 Image Classifier Detector</h3>
-                  <ul class="nav footer-nav">
-                      <li>
+          <footer class="main-footer col-sm-12">
+              <div class="container main-footer-container col-sm-12">
+                  <h3 class="seekcenter col-sm-12">Covid19 Image Classifier Detector</h3>
+                  <ul class="nav footer-nav col-sm-12">
+                      <li class="col-sm-3">
                           <a href="https://www.youtube.com" target="_blank">
                               <img src="{{url_for('static', filename='images/youtubelogo.png')}}">
                           </a>
                       </li>
-                      <li>
+                      <li class="col-sm-3">
                           <a href="https://www.facebook.com" target="_blank">
                               <img src="{{url_for('static', filename='images/facebooktextlogo.png')}}">
                           </a>
                       </li>
-                      <li>
+                      <li class="col-sm-3">
                           <a href="https://github.com" target="_blank">
                               <img src="{{url_for('static', filename='images/githublogoblackinside.png')}}">
                           </a>
                       </li>
                   </ul>
               </div>
-              <p class="seekcenter2">Copyright &copy; <script>document.write(new Date().getFullYear())</script> By Ramy Elsaraf, All Rights Reserved.</p>
+              <p class="seekcenter2 col-sm-12">Copyright &copy; <script>document.write(new Date().getFullYear())</script> By Ramy Elsaraf, All Rights Reserved.</p>
 
     <script src="{{ url_for('static', filename='js/main.js') }}" type="text/javascript"></script>
      <script src="{{ url_for('static', filename='js/script.js') }}" type="text/javascript"></script>
