--- a/templates/cts.html
+++ b/templates/cts.html
@@ -25,10 +25,10 @@
       <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
           <header class="main-header col-sm-12">
               <nav class="nav main-nav center col-sm-12">
-                  <ul class="row">
-                      <li class="col-sm-12"><a href="/">Home (CT and Xray Together)</a></li>
-                      <li class="col-sm-12"><a href="/xray">Xray</a></li>
-                      <li class="active col-sm-12"><a href="/ct">CT</a></li>
+                  <ul class="">
+                      <li class=""><a href="/">Home (CT and Xray Together)</a></li>
+                      <li class=""><a href="/xray">Xray</a></li>
+                      <li class="active"><a href="/ct">CT</a></li>
                   </ul>
               </nav>
               <h1 class="band-name zakcenter col-sm-12">COVID19 Chest Image CT Detector</h1>
