--- a/templates/index2.html
+++ b/templates/index2.html
@@ -9,12 +9,17 @@
         src="https://cdn.jsdelivr.net/npm/brython@3.10.1/brython_stdlib.js">
     </script>
           <title>Covid19 Image Classifier Detector</title>
-          <link href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
+<!--          <link href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">-->
+          <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <!--          <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">-->
-    <script src="https://cdn.bootcss.com/popper.js/1.12.9/umd/popper.min.js"></script>
-    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+
+<!--    <script src="https://cdn.bootcss.com/popper.js/1.12.9/umd/popper.min.js"></script>-->
+<!--    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>-->
+
 <!--    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>      -->
-    <script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+<!--    <script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>-->
+
           <meta name="Covid19 Chest Image Scan Detector" content="Detect Whether a Chest Image Scan Has Covid19 or not">
           <link rel="icon" href="{{url_for('static', filename='images/clean_hands_open_hearts_covid19footerimage2-removebg-preview.png')}}" type="image/" >
 <!--          <link rel="stylesheet" href="styles/styles.css" />-->
@@ -211,6 +216,8 @@
     <script src="{{ url_for('static', filename='js/main.js') }}" type="text/javascript"></script>
      <script src="{{ url_for('static', filename='js/script.js') }}" type="text/javascript"></script>
           </footer>
+
+
       </body>
   </html>
 
