--- a/templates/index2.html
+++ b/templates/index2.html
@@ -2,12 +2,10 @@
   <html>
       <head>
           <meta charset="utf-8">
-    <script type="text/javascript"
-        src="https://cdn.jsdelivr.net/npm/brython@3.10.1/brython.min.js">
-    </script>
-    <script type="text/javascript"
-        src="https://cdn.jsdelivr.net/npm/brython@3.10.1/brython_stdlib.js">
-    </script>
+          <script src="https://cdn.jsdelivr.net/npm/brython@3/brython.min.js">
+          </script>
+          <script src="https://cdn.jsdelivr.net/npm/brython@3/brython_stdlib.js">
+          </script>
           <title>Covid19 Image Classifier Detector</title>
 <!--          <link href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">-->
           <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -30,7 +28,7 @@
       </head>
       <body onload="brython()" class="col-sm-12">
 <!--      <input type="button" id='script' name="scriptbutton" value=" Run Script " onclick="goPython()">-->
-      <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+      <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
           <header class="main-header">
               <nav class="nav main-nav center">
                   <ul class="">
