--- a/templates/index2.html
+++ b/templates/index2.html
@@ -193,17 +193,17 @@
                   <h3 class="seekcenter col-sm-12">Covid19 Image Classifier Detector</h3>
                   <ul class="nav footer-nav col-sm-12">
                       <li class="col-sm-3">
-                          <a href="https://www.youtube.com" target="_blank">
+                          <a href="https://www.youtube.com/results?search_query=covid+19+news" target="_blank">
                               <img src="{{url_for('static', filename='images/youtubelogo.png')}}">
                           </a>
                       </li>
                       <li class="col-sm-3">
-                          <a href="https://www.facebook.com" target="_blank">
+                          <a href="https://www.facebook.com/coronavirus_info/" target="_blank">
                               <img src="{{url_for('static', filename='images/facebooktextlogo.png')}}">
                           </a>
                       </li>
                       <li class="col-sm-3">
-                          <a href="https://github.com" target="_blank">
+                          <a href="https://github.com/Ramy9999/fgg" target="_blank">
                               <img src="{{url_for('static', filename='images/githublogoblackinside.png')}}">
                           </a>
                       </li>
@@ -298,13 +298,13 @@ function updateThumbnail(dropZoneElement, file) {
 <!--end of drag and drop 2-->
 
 <!--   $("input[name='image']").imageuploadify();-->
-   $("li").click(
-    function(event) {
-      $('li').removeClass('active');
-      $(this).addClass('active');
-<!--      event.preventDefault()-->
-    }
-);
+//    $("li").click(
+//     function(event) {
+//       $('li').removeClass('active');
+//       $(this).addClass('active');
+// <!--      event.preventDefault()-->
+//     }
+// );
 
 <!--   $(function(){-->
 
